--- a/tmux.conf
+++ b/tmux.conf
@@ -1,44 +1,27 @@
-# ~/.tmux.conf
-# Tmux configuration with TPM (Tmux Plugin Manager)
+set -g default-terminal "xterm-ghostty"
+set -ga terminal-overrides ",xterm-ghostty:RGB"
 
-# ==============================================================================
-# TPM PLUGINS
-# ==============================================================================
+# Start window numbering at 1 instead of 0
+set -g base-index 1
+set -g pane-base-index 1
 
-# TPM itself
-set -g @plugin 'tmux-plugins/tpm'
+# Bells
+# Let bells actually reach the terminal
+set -g bell-action any
 
-# Custom configuration (Larry's ergonomic tmux setup)
-# Uses Ctrl+S prefix, vim-style navigation, smart pane killing, etc.
-set -g @plugin 'silverl/tmux'
+# Don’t replace sound with a visual flash (optional)
+set -g visual-bell off
 
-# Session persistence
-set -g @plugin 'tmux-plugins/tmux-resurrect'      # Save/restore tmux sessions
-set -g @plugin 'tmux-plugins/tmux-continuum'      # Auto-save sessions every 15 minutes
+# Optional: mark windows with bells in the status line
+set -g monitor-bell on
 
-# Additional useful plugins (uncomment to enable):
-# set -g @plugin 'tmux-plugins/tmux-sensible'       # Basic tmux settings everyone can agree on
-# set -g @plugin 'tmux-plugins/tmux-yank'           # Enhanced clipboard integration
-# set -g @plugin 'tmux-plugins/tmux-pain-control'   # Better pane navigation bindings
-
-# ==============================================================================
-# ADDITIONAL CUSTOMIZATIONS
-# ==============================================================================
-# Add any additional settings below (these will override plugin defaults)
-
-# Session persistence settings
-set -g @continuum-restore 'on'                    # Auto-restore last saved session on tmux start
-
-# Example: Change status bar colors
-# set -g status-style 'bg=blue,fg=white'
-
-# Example: Change prefix to something else (if you don't like Ctrl+S from the plugin)
-# unbind C-s
-# set -g prefix C-a
-# bind C-a send-prefix
-
-# ==============================================================================
-# INITIALIZE TPM
-# ==============================================================================
-# IMPORTANT: This line must be at the very bottom of tmux.conf
-run '~/.tmux/plugins/tpm/tpm'
+# Window switching with Ctrl+number (no prefix needed)
+bind-key -n C-1 select-window -t 1
+bind-key -n C-2 select-window -t 2
+bind-key -n C-3 select-window -t 3
+bind-key -n C-4 select-window -t 4
+bind-key -n C-5 select-window -t 5
+bind-key -n C-6 select-window -t 6
+bind-key -n C-7 select-window -t 7
+bind-key -n C-8 select-window -t 8
+bind-key -n C-9 select-window -t 9
