--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,7 @@
-set -g default-terminal "xterm-ghostty"
-set -ga terminal-overrides ",xterm-ghostty:RGB"
+# Platform-specific terminal settings
+if-shell "uname | grep -q Darwin" \
+  "set -g default-terminal 'screen-256color'; set -ga terminal-overrides ',xterm-256color:RGB'" \
+  "set -g default-terminal 'tmux-256color'; set -ga terminal-overrides ',xterm-256color:Tc'"
 
 # Start window numbering at 1 instead of 0
 set -g base-index 1
