--- a/tmux.conf
+++ b/tmux.conf
@@ -27,3 +27,10 @@ bind-key -n C-6 select-window -t 6
 bind-key -n C-7 select-window -t 7
 bind-key -n C-8 select-window -t 8
 bind-key -n C-9 select-window -t 9
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
