refactor: consolidate tmux configuration into single file to eliminate duplication and simplify installation
- Merged scripts/key-bindings.tmux into tmux.conf for single source of truth
- Removed duplicate settings (base-index, bells, terminal overrides)
- Fixed conflicting terminal settings that were overriding platform-specific configuration
- Eliminated circular TPM plugin loading (no longer need symlink to own repo)
- Simplified installation from 6 steps to 5 steps
- Updated README with streamlined installation instructions
- Deleted obsolete files: tmux-custom.tmux, scripts/key-bindings.tmux
- Kept essential scripts: kill-pane.bash, jump-scroll.bash

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,21 +1,105 @@
+# ==============================================================================
+# PLATFORM-SPECIFIC TERMINAL SETTINGS
+# ==============================================================================
+
 # Platform-specific terminal settings
 if-shell "uname | grep -q Darwin" \
   "set -g default-terminal 'screen-256color'; set -ga terminal-overrides ',xterm-256color:RGB'" \
   "set -g default-terminal 'tmux-256color'; set -ga terminal-overrides ',xterm-256color:Tc'"
 
+# ==============================================================================
+# GENERAL SETTINGS
+# ==============================================================================
+
+# Enable mouse support (useful for quick pane selection)
+set -g mouse on
+
+# Increase history limit
+set -g history-limit 50000
+
 # Start window numbering at 1 instead of 0
 set -g base-index 1
 set -g pane-base-index 1
 
-# Bells
+# Renumber windows when one is closed
+set -g renumber-windows on
+
+# Enable focus events for vim
+set -g focus-events on
+
+# Faster command sequences (reduce escape time)
+set -s escape-time 10
+
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# ==============================================================================
+# BELL NOTIFICATIONS
+# ==============================================================================
+
 # Let bells actually reach the terminal
 set -g bell-action any
 
-# Don’t replace sound with a visual flash (optional)
+# Don't replace sound with a visual flash
 set -g visual-bell off
 
-# Optional: mark windows with bells in the status line
+# Mark windows with bells in the status line
 set -g monitor-bell on
+set -g window-status-bell-style 'fg=red,bold'
+
+# ==============================================================================
+# PREFIX CONFIGURATION
+# ==============================================================================
+
+# Change prefix from Ctrl+B to Ctrl+S (easier with Caps Lock mapped to Ctrl)
+unbind C-b
+set -g prefix C-s
+bind C-s send-prefix
+
+# ==============================================================================
+# PANE NAVIGATION (Vim-style)
+# ==============================================================================
+
+# Navigate panes with h/j/k/l (after prefix)
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Smart vertical pane switching with resize trick
+# (prevents "invisible pane" problem by briefly resizing before switch)
+bind -r j resize-pane -t .-1 -y 1 \; select-pane -D \; resize-pane -y -
+bind -r k resize-pane -t .+1 -y 1 \; select-pane -U \; resize-pane -y -
+
+# ==============================================================================
+# PANE SPLITTING (with path preservation)
+# ==============================================================================
+
+# Split horizontally (vertical divider)
+bind v split-window -h -c "#{pane_current_path}"
+
+# Split vertically (horizontal divider)
+bind s split-window -v -c "#{pane_current_path}"
+
+# ==============================================================================
+# PANE MANAGEMENT
+# ==============================================================================
+
+# Smart pane killing (confirms for vim/ssh, instant for shells)
+bind x run-shell "~/code/tmux/scripts/bin/kill-pane.bash"
+
+# Toggle pane zoom
+bind f resize-pane -Z
+
+# Pane resizing with arrow keys
+bind -r Left resize-pane -L 5
+bind -r Right resize-pane -R 5
+bind -r Down resize-pane -D 5
+bind -r Up resize-pane -U 5
+
+# ==============================================================================
+# WINDOW NAVIGATION
+# ==============================================================================
 
 # Window switching with Ctrl+number (no prefix needed)
 bind-key -n C-1 select-window -t 1
@@ -28,9 +112,60 @@ bind-key -n C-7 select-window -t 7
 bind-key -n C-8 select-window -t 8
 bind-key -n C-9 select-window -t 9
 
+# Previous/Next window with [ and ] (doesn't conflict with pane navigation)
+bind -r [ previous-window
+bind -r ] next-window
+
+# Also support H/L (shifted) for window navigation
+bind H previous-window
+bind L next-window
+
+# Create new window in current path
+bind c new-window -c "#{pane_current_path}"
+
+# ==============================================================================
+# COPY MODE (Vim-style with clipboard integration)
+# ==============================================================================
+
+# Enter copy mode easily
+bind y copy-mode
+
+# Vim-style visual selection and yanking
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi V send-keys -X select-line
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+
+# Yank to system clipboard (macOS)
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+
+# Jump scrolling in copy mode (5 lines at a time)
+bind-key -T copy-mode-vi K run-shell "~/code/tmux/scripts/bin/jump-scroll.bash -5"
+bind-key -T copy-mode-vi J run-shell "~/code/tmux/scripts/bin/jump-scroll.bash 5"
+
+# Navigate to line boundaries
+bind-key -T copy-mode-vi H send-keys -X start-of-line
+bind-key -T copy-mode-vi L send-keys -X end-of-line
+
+# Half-page scrolling
+bind-key -T copy-mode-vi C-u send-keys -X halfpage-up
+bind-key -T copy-mode-vi C-d send-keys -X halfpage-down
+
+# ==============================================================================
+# SESSION MANAGEMENT
+# ==============================================================================
+
+# Show session menu
+bind a choose-session
+
+# ==============================================================================
+# TPM PLUGIN MANAGER
+# ==============================================================================
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
